# NGridTraversal

./: .gitignore  CMakeLists.txt  NGridTraversal.sln
NGridTraversal/: FlatApproach.h  InheritanceApproach.h  NGridTraversal.vcxproj  NGridTraversal.vcxproj.filters  main.cpp
source/: FlatApproach.h  Grid.h  GridIndexIterator.h  GridIterator.h  main.cpp
tests/: GridFixture.h  GridIndexIteratorTests.cpp  GridTests.cpp  NGridTests.cpp
